bin_PROGRAMS = chumbradiod chumbyradio
chumbradiod_SOURCES = chumbradiod.cpp crad_interface.c crad_return_codes.c crad_content_handler.cpp crad_crossdomain_handler.cpp qndriver.c qnio.c crad_rds_decoder.c
chumbradiod_LDADD = -lchumbhttpd -lpthread -lasound
chumbyradio_SOURCES = chumbyradio.cpp crad_interface.c crad_return_codes.c crad_content_handler.cpp crad_crossdomain_handler.cpp qndriver.c qnio.c crad_rds_decoder.c
chumbyradio_LDADD = -lchumbhttpd -lpthread -lasound
